--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ yarn-error.log*
 # Env files created by scripts for working locally
 .env
 studio/.env.development
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
