--- a/package.json
+++ b/package.json
@@ -13,40 +13,40 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@next/env": "14.2.2",
+    "@next/env": "14.2.5",
     "@sanity/demo": "2.0.0",
-    "@sanity/icons": "^3.3.0",
+    "@sanity/icons": "3.3.0",
     "@sanity/image-url": "1.0.2",
-    "@sanity/preview-url-secret": "1.6.9",
-    "@sanity/react-loader": "1.9.12",
-    "@sanity/ui": "2.1.4",
-    "@sanity/vision": "3.38.0",
-    "@tailwindcss/typography": "0.5.12",
+    "@sanity/preview-url-secret": "1.6.18",
+    "@sanity/react-loader": "1.10.4",
+    "@sanity/ui": "2.8.5",
+    "@sanity/vision": "3.51.0",
+    "@tailwindcss/typography": "0.5.13",
     "classnames": "2.5.1",
     "date-fns": "3.6.0",
-    "next": "14.2.2",
-    "next-sanity": "9.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "14.2.5",
+    "next-sanity": "9.4.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "rxjs": "7.8.1",
-    "sanity": "3.38.0",
+    "sanity": "3.51.0",
     "sanity-plugin-asset-source-unsplash": "3.0.1",
     "server-only": "0.0.1",
-    "styled-components": "6.1.8"
+    "styled-components": "6.1.12"
   },
   "devDependencies": {
     "@playwright/test": "^1.45.2",
     "@types/node": "^20.14.11",
-    "@types/react": "18.2.79",
+    "@types/react": "18.3.3",
     "autoprefixer": "10.4.19",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.2",
-    "eslint-plugin-simple-import-sort": "12.1.0",
-    "postcss": "8.4.38",
-    "prettier": "3.2.5",
-    "prettier-plugin-packagejson": "2.5.0",
-    "prettier-plugin-tailwindcss": "0.5.14",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "eslint": "9.7.0",
+    "eslint-config-next": "14.2.5",
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "postcss": "8.4.39",
+    "prettier": "3.3.3",
+    "prettier-plugin-packagejson": "2.5.1",
+    "prettier-plugin-tailwindcss": "0.6.5",
+    "tailwindcss": "3.4.6",
+    "typescript": "5.5.3"
   }
 }
